fixup! fix checking 'make public' adding scrollbar.

--- a/reddit_gold/public/static/css/gold.less
+++ b/reddit_gold/public/static/css/gold.less
@@ -881,7 +881,6 @@ section#postcard {
         border-radius: 5px;
 
         .buttons {
-            overflow: auto;
             text-align: left;
         }
         .message {
